--- a/_pages/404.html
+++ b/_pages/404.html
@@ -4,6 +4,6 @@ title: 'Error 404!'
 permalink: 404.html
 ---
 
-<h1>Page Not Found</h1>
+<h1>Страница не найдена</h1>
 
-The page you are looking for is not found. Please head back to <a href="{{site.baseurl}}/">Homepage</a>
+Искомая страница не найдена, перейдите на <a href="{{site.baseurl}}/">главную страницу сайта</a>.
