Поправил пост /needs/ - заголовки в группах потребностей

--- a/_posts/2023-03-06-needs-list-9.html
+++ b/_posts/2023-03-06-needs-list-9.html
@@ -11,7 +11,7 @@ permalink: /needs/
 <div class="gallery">
 
   <div>
-  	<p>1. Пропитание и Выживание</p>
+  	<h4>1. Пропитание и Выживание</h4>
   	<ul>
   		<li>Выживание</li>
   		<li>Еда</li>
@@ -27,7 +27,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>2. Безопасность и Защита</p>
+  	<h4>2. Безопасность и Защита</h4>
   	<ul>
   		<li>Безопасность</li>
   		<li>Доверие</li>
@@ -41,7 +41,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>3. Любовь и Привязанность</p>
+  	<h4>3. Любовь и Привязанность</h4>
     Потребность может быть<br>
     как в получении,<br>
     так и в выражении заботы, близости, любви, и т.д.
@@ -63,7 +63,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>4. Эмпатия и Понимание</p>
+  	<h4>4. Эмпатия и Понимание</h4>
   	<ul>
   		<li>Теплые отношение</li>
   		<li>Быть услышанным</li>
@@ -75,7 +75,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>5. Самовыражение и Творчество</p>
+  	<h4>5. Самовыражение и Творчество</h4>
   	<ul>
   		<li>Самовыражение</li>
   		<li>Творчество</li>
@@ -89,7 +89,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>6. Отдых, Безделье, Личное пространство и Игра</p>
+  	<h4>6. Отдых, Безделье, Личное пространство и Игра</h4>
   	<ul>
   		<li>Игра</li>
   		<li>Игривость</li>
@@ -101,7 +101,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>7. Вовлеченность в Сообщество, Ощущение принадлежности</p>
+  	<h4>7. Вовлеченность в Сообщество, Ощущение принадлежности</h4>
   	<ul>
   		<li>Причастность</li>
   		<li>Вовлеченность</li>
@@ -117,7 +117,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>8. Свобода и Независимость</p>
+  	<h4>8. Свобода и Независимость</h4>
   <ul>
   	<li>Самоуважение</li>
   	<li>Самопринятие</li>
@@ -129,7 +129,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<p>9. Вклад, Осмысленность и Увлеченность</p>
+  	<h4>9. Вклад, Осмысленность и Увлеченность</h4>
   	<ul>
   		<li>Потребность видеть смысла в том что делаешь</li>
   		<li>Развитие</li>
