подправил список потребностей

--- a/_posts/2023-03-06-needs-list-9.html
+++ b/_posts/2023-03-06-needs-list-9.html
@@ -89,7 +89,7 @@ permalink: /needs/
   </div>
 
   <div>
-  	<h4>6. Отдых, Безделье, Личное пространство и Игра</h4>
+  	<h4>6. Отдых, Безделье и Игра</h4>
   	<ul>
   		<li>Игра</li>
   		<li>Игривость</li>
@@ -131,7 +131,7 @@ permalink: /needs/
   <div>
   	<h4>9. Вклад, Осмысленность и Увлеченность</h4>
   	<ul>
-  		<li>Потребность видеть смысла в том что делаешь</li>
+  		<li>Потребность видеть смысл в том, что делаешь</li>
   		<li>Развитие</li>
   		<li>Эффективность</li>
   		<li>Осмысленность</li>
