поправил список потребностей

--- a/_posts/2023-03-06-needs-list-9.html
+++ b/_posts/2023-03-06-needs-list-9.html
@@ -5,8 +5,9 @@ published: true
 permalink: /needs/
 ---
 
-Базовые потребности, общие для всех.<br>
-Разбитые на 9 групп:
+Базовые потребности, общие для всех.
+<br>
+Разбитые на 9 групп (<a href="/files/needs_v01.docx">Скачать в виде doc-файла</a>):
 
 <div class="gallery">
 
