--- a/_posts/2023-03-06-needs-list-9.html
+++ b/_posts/2023-03-06-needs-list-9.html
@@ -7,7 +7,7 @@ permalink: /needs/
 
 Базовые потребности, общие для всех.
 <br>
-Разбитые на 9 групп (<a href="/files/needs_v01.docx">Скачать в виде doc-файла</a>):
+Разбитые на 9 групп (<a href="/assets/files/needs_v01.docx">Скачать в виде doc-файла</a>):
 
 <div class="gallery">
 
