--- a/archive.html
+++ b/archive.html
@@ -15,6 +15,24 @@ title: Archive
 	<h3><small>{{ post.date | date: '%B %Y' }}</small></h3>
 	{% endif %}
 	{% endunless %}
-    <a href="{{ post.url | prepend: site.baseurl }}">* {{ post.title }}</a><br>
+    <a href="{{ post.url | prepend: site.baseurl }}">📃 {{ post.title }}</a><br>
 	{% endfor %}
 </div>
+<!--
+	<div>
+		<ul>
+		{% for post in site.posts %}
+		{% unless post.next %}
+		<h3><small>{{ post.date | date: '%B %Y' }}</small></h3>
+		{% else %}
+		{% capture year %}{{ post.date | date: '%Y %b' }}{% endcapture %}
+		{% capture nyear %}{{ post.next.date | date: '%Y %b' }}{% endcapture %}
+		{% if year != nyear %}
+		<h3><small>{{ post.date | date: '%B %Y' }}</small></h3>
+		{% endif %}
+		{% endunless %}
+	    <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
+		{% endfor %}
+		</ul>
+	</div>
+-->
