Внес небольшие изменения и тайтл для чувства чтобы проверить в списке чувств

--- a/_pages/memos/feelings-list-5.html
+++ b/_pages/memos/feelings-list-5.html
@@ -9,7 +9,7 @@ permalink: /feelings/
 <br>
 Список представлен в двух вариантах - <a href="#table"><b>компактный</b></a> и <a href="#full"><b>подробный</b></a>, с пояснениями к каждому чувству.
 <br>
-За основу списка взяты материалы сайта <a href="http://atlasofemotions.org/">atlasofemotions.org</a>
+За основу списка взяты материалы сайта <a href="http://atlasofemotions.org/#continents">atlasofemotions.org</a>
 
 <h3><a name="table" href="#table">Список чувств в компактном виде</a></h3>
 
@@ -18,7 +18,7 @@ permalink: /feelings/
   <div>
   	<h4>1. Злость</h4>
   	<ul>
-  		<li>Недовольство, Легкое раздражение</li>
+  		<li title="Очень мягкий гнев, вызванный неприятностью или неудобством.">Недовольство, Легкое раздражение</li>
   		<li>Раздражение, Фрустрация</li>
   		<li>Гнев, Злость</li>
   		<li>Желание доказать правоту</li>
