Мелкие правки, исправил опечатку

--- a/_pages/memos/feelings-list-5.html
+++ b/_pages/memos/feelings-list-5.html
@@ -18,7 +18,7 @@ permalink: /feelings/
   <div>
   	<h4>1. Злость</h4>
   	<ul>
-  		<li title="Очень мягкий гнев, вызванный неприятностью или неудобством.">Недовольство, Легкое раздражение</li>
+  		<li>Недовольство, Легкое раздражение</li>
   		<li>Раздражение, Фрустрация</li>
   		<li>Гнев, Злость</li>
   		<li>Желание доказать правоту</li>
@@ -103,7 +103,7 @@ permalink: /feelings/
   	<ul>
   		<li><b>Недовольство, Легкое раздражение</b><br>&emsp; Очень мягкий гнев, вызванный неприятностью или неудобством.</li>
   		<li><b>Раздражение, Фрустрация</b><br>&emsp; Реакция на повторяющиеся неудачи в преодолении препятствия.</li>
-  		<li><b>Гнев, Злость</b><br>&emsp; Гнев, вызванный повторяющийся или сильной неприятность.</li>
+  		<li><b>Гнев, Злость</b><br>&emsp; Гнев, вызванный повторяющийся или сильной неприятностью.</li>
   		<li><b>Желание доказать правоту</b><br>&emsp; Импульс, побуждающий начать спор.</li>
   		<li><b>Обида, Горечь</b><br>&emsp; Гнев после несправедливого обращения.</li>
   		<li><b>Желание отомстить, Озлобленность</b><br>&emsp; Желание отомстить после обиды.</li>
