Добавил описание description на страницы сайта, кроме /blog

--- a/_pages/memos/feelings-list-5.html
+++ b/_pages/memos/feelings-list-5.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Список чувств"
+description: "Список чувств и эмоция с пояснениями. Атлас чувств"
 published: true
 permalink: /feelings/
 ---
