--- a/_pages/memos/needs-list-9.html
+++ b/_pages/memos/needs-list-9.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Базовые потребности, общие для всех"
+description: "Список общечеловеческих потребностей, разбитый на 9 категорий"
 published: true
 permalink: /needs/
 ---
