--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 permalink: /archive/
-title: "Все заметки списком на одной страницу"
+title: "📚 Все заметки списком на одной страницу"
 description: "Тут на одной странице собраны ссылки на все посты блога"
 sitemap:
   exclude: 'yes'
