Добавил слой single для отдельных html страниц и применил к needs и feelings

--- a/_pages/memos/needs-list-9.html
+++ b/_pages/memos/needs-list-9.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: "Базовые потребности, общие для всех"
 description: "Список общечеловеческих потребностей, разбитый на 9 категорий"
 published: true
