--- a/_pages/memos/feelings-list-5.html
+++ b/_pages/memos/feelings-list-5.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: "Список чувств"
 description: "Список чувств и эмоция с пояснениями. Атлас чувств"
 published: true
