--- a/yandex_fc33a805f7476be1.html
+++ b/yandex_fc33a805f7476be1.html
@@ -1,3 +1,8 @@
+---
+layout: null
+sitemap:
+  exclude: 'yes'
+---
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
