Немного изменил страницу 404

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -12,5 +12,5 @@ sitemap:
 <h3>Страница не найдена 🚧</h3>
 <p>Ссылка на <a href="{{site.baseurl}}/rnd/">случайный пост в блоге🍀</a>.</p>
 <p>‍🎈 Если по ссылке должно было быть что-то важное для вас,<br>
-  можете написать мне по контактам ниже 👇</p>
+  можете написать мне по контактам ниже👇 и, возможно, я смогу вам помочь.</p>
 <hr>
