поменял window.location.replace на location.replace (по аналогии с тем как сделано перенаправление на рандомный пост)

--- a/_pages/reg-msk.html
+++ b/_pages/reg-msk.html
@@ -15,7 +15,7 @@ sitemap:
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="expires" content="0">
     <script>
-        window.location.replace("{{ page.reg_msk_url }}");
+        location.replace("{{ page.reg_msk_url }}");
     </script>
 
     <title>Перенаправление на регистрацию (ближайшее мероприятие в Москве)</title>
