Добавил сверху комментарии как пользоваться списком

--- a/_pages/memos/needs-list-9.html
+++ b/_pages/memos/needs-list-9.html
@@ -9,6 +9,10 @@ permalink: /needs/
 Базовые потребности, общие для всех.
 <br>
 Разбитые на 9 групп (<a href="/assets/files/needs_v01.docx">Скачать в виде doc-файла</a>):
+<br>
+Как им пользоваться - просто посмотреть в него и подумать: "а что для меня вот эта потребность, как я понимаю что она удовлетворяется?".
+<br>
+Важно также понимать что список потребностей - это не чтото утвержденное, не догма. Гораздо важнее ощутить контакт с потребность, понять - что это для меня.
 
 <div class="gallery">
 
