--- a/_pages/test-reg-msk.html
+++ b/_pages/test-reg-msk.html
@@ -1,7 +1,7 @@
 ---
 title: Перенаправление на регистрацию (ближайшее мероприятие в Москве)
 layout: null
-reg_msk_url: "https://forms.gle/Qfmu4ksxqf7mAqqH7"
+reg_msk_url: "https://forms.gle/gJ8Vg4NTj6TDGFUj6"
 permalink: /test-reg-msk/
 published: true
 sitemap:
