--- a/_pages/test-reg-msk.html
+++ b/_pages/test-reg-msk.html
@@ -1,7 +1,7 @@
 ---
 title: Перенаправление на регистрацию (ближайшее мероприятие в Москве)
 layout: null
-reg_msk_url: "https://forms.gle/YzXPeakBfuh18nxT9"
+reg_msk_url: "https://forms.gle/5Bz7G31K2GyCjTj76"
 permalink: /test-reg-msk/
 published: true
 sitemap:
