Обновление ссылки на оффлайн мероприятие на 05.02.2025

--- a/_pages/reg-msk.html
+++ b/_pages/reg-msk.html
@@ -1,7 +1,7 @@
 ---
 title: Перенаправление на регистрацию (ближайшее мероприятие в Москве)
 layout: null
-reg_msk_url: "https://forms.gle/v8Vm6wjLfLHUzaLn6"
+reg_msk_url: "https://ivanbek.timepad.ru/event/3190976/"
 permalink: /reg-msk/
 published: true
 sitemap:
